# soiled

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  pyrightconfig.json
lib/: connect.py  request.py
